--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ p {
   
   .phase {
     width: 18%; /* Adjust as needed */
-    background-color: red;
+    background-color: rgb(22, 26, 37);
     margin: 20px;
     border-radius: 10px;
     display: flex;
